# tehnopark_rgsu

./: 404.html  README.md  index.html  robots.txt  sitemap.xml
.github/workflows/: pages.yml
entry_pass_generator/: Dockerfile  README.md  __init__.py  pyproject.toml  webhook.py
entry_pass_generator/app/: mail.py  models.py  pdf.py  webhook.py
entry_pass_generator/app/templates/: index.html  start.html  sz_template.html
entry_pass_generator/tests/: test_models.py  test_pdf.py  test_web.py
